--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
     </header>
 
-    <section id="about" class="download bg-primary text-center">
+    <section id="about" class="download bg-blue text-center">
         <div class="container">
         <div class="row">
                 <div class="col-md-8">
@@ -131,7 +131,7 @@
         </div>
     </section>
 
-    <section id="mis" class="features bg-secondary">
+    <section id="mis" class="features bg-red">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -164,20 +164,20 @@
             <h2>Our Programs</h2>
             <div class="row">
                 <div class="col-md-4">
-                    <a href="#students" target="_blank" class="btn btn-outline page-scroll btn-square btn-block" >National Competition (NEDC)</a>
+                    <a href="pro1.html" class="btn btn-outline page-scroll btn-square btn-block" >National Competition (NEDC)</a>
                 </div>
                 <div class="col-md-4">
-                    <a href="#teachers" target="_blank" class="btn btn-outline page-scroll btn-square btn-block" >Regional Competition</a>
+                    <a href="pro2.html" class="btn btn-outline page-scroll btn-square btn-block" >Regional Competition</a>
                 </div>
                 <div class="col-md-4">
-                    <a href="#administrators" target="_blank" class="btn btn-outline page-scroll btn-square btn-block" >Summer Programs</a>
+                    <a href="pro3.html" class="btn btn-outline page-scroll btn-square btn-block" >Summer Programs</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="contact" class="contact">
-        <div class="pad bg-primary">
+    <section id="contact" class="contact bg-blue">
+        <div class="pad">
         <div class="row ">
             <h2>Get Involved</h2>
         </div>
@@ -206,13 +206,13 @@
                 <div class="col-md-8">
                     <h2>Resources For</h2>
                     <div class="col-md-4">
-                    <a href="#students" target="_blank" class="btn btn-outline page-scroll btn-square btn-block" >Students</a>
+                    <a href="student.html"class="btn btn-outline page-scroll btn-square btn-block" >Students</a>
                     </div>
                     <div class="col-md-4">
-                    <a href="#teachers" target="_blank" class="btn btn-outline page-scroll btn-square btn-block" >Teachers</a>
+                    <a href="teacher.html"class="btn btn-outline page-scroll btn-square btn-block" >Teachers</a>
                     </div>
                     <div class="col-md-4">
-                    <a href="#administrators" target="_blank" class="btn btn-outline page-scroll btn-square btn-block" >Administrator</a>
+                    <a href="adminstrator.html" class="btn btn-outline page-scroll btn-square btn-block" >Administrator</a>
                     </div>
                 </div> 
                 <div class="col-md-4">
