--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="col-sm-12">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1 class="text-center">Stem Education</h1>
+                            <h1 class="text-center">STEM Education</h1>
                             <h1 class="text-center"><span style="color:#a41e35;">Temple</span> Made</h1>
                             <h3>Inspiring Pennsylvanian Youth since 2008</h3>
                         </div>
@@ -96,6 +96,20 @@
         </div>
     </header>
 
+    <section id="mis" class="features bg-red" style="padding-top: 20px;padding-bottom: 20px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 text-center">
+                        <h3>Pennsylvanina MESA State Competition Launch is October 7th 2017</h3>
+                        <h3>Registration Ends October 31st 2017</h3>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <a href="pro2.html" class="btn btn-vcenter btn-outline page-scroll btn-square btn-block" style="margin-top: 30px;margin-bottom: 30px;">More Info</a>    
+                </div>
+            </div>
+        </div>
+    </section>
+    
     <section id="about" class="download bg-blue text-center">
         <div class="container">
         <div class="row">
@@ -167,7 +181,7 @@
                     <a href="pro1.html" class="btn btn-outline page-scroll btn-square btn-block" >National Competition (NEDC)</a>
                 </div>
                 <div class="col-md-4">
-                    <a href="pro2.html" class="btn btn-outline page-scroll btn-square btn-block" >Regional Competition</a>
+                    <a href="pro2.html" class="btn btn-outline page-scroll btn-square btn-block" >State Competition</a>
                 </div>
                 <div class="col-md-4">
                     <a href="pro3.html" class="btn btn-outline page-scroll btn-square btn-block" >Summer Programs</a>
