--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="col-sm-12">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1 class="text-center">STEM Education</h1>
+                            <h1 class="text-center"> Education</h1>
                             <h1 class="text-center"><span style="color:#a41e35;">Temple</span> Made</h1>
                             <h3>Inspiring Pennsylvanian Youth since 2008</h3>
                         </div>
